--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">VC Calling</string>
 
+    <string name="app_name">VC Calling</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_recycler_view">RecyclerView</string>
+    <string name="title_activity_card_view">CardViewActivity</string>
+
 </resources>
