--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_recycler_view">RecyclerView</string>
     <string name="title_activity_card_view">CardViewActivity</string>
+    <string name="title_activity_reader">ReaderActivity</string>
 
 </resources>
